--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Sun, 05 Mar 2023 14:22:05 GMT
+ * Generated on Mon, 06 Mar 2023 14:50:54 GMT
  */
 
 :root {
@@ -13,20 +13,24 @@
   --cat1-default: #8e8e8e;
   --cat2-bg: #fffaf0;
   --cat2-fg: #433f37;
-  --cat2-c0-a: #f80700;
-  --cat2-c0-b: #ff5651;
-  --cat2-c0-text: #e80700;
-  --cat2-c1-a: #408689;
-  --cat2-c1-b: #4b9ea2;
-  --cat2-c1-text: #3c7d7f;
-  --cat2-c2-a: #b648e0;
-  --cat2-c2-b: #c56de6;
-  --cat2-c2-text: #b039dd;
-  --cat2-other-a: #8C7A54;
-  --cat2-other-b: #9F8F60;
-  --cat2-other-text: #83724E;
-  --cat2-toss-a: #CECBC5;
-  --cat2-toss-text: #58554B;
+  --cat2-c0-probably: #e80700;
+  --cat2-c0-maybe: #ff5651;
+  --cat2-c0-text-probably: #fffafa;
+  --cat2-c0-text-maybe: #5d0300;
+  --cat2-c1-probably: #3c7d7f;
+  --cat2-c1-maybe: #4b9ea2;
+  --cat2-c1-text-probably: #f5fafa;
+  --cat2-c1-text-maybe: #162e30;
+  --cat2-c2-probably: #b039dd;
+  --cat2-c2-maybe: #c56de6;
+  --cat2-c2-text-probably: #fdf9fe;
+  --cat2-c2-text-maybe: #460f5a;
+  --cat2-other-probably: #83724E;
+  --cat2-other-maybe: #9F8F60;
+  --cat2-other-text-probably: #fcfbfa;
+  --cat2-other-text-maybe: #2e291c;
+  --cat2-toss-probably: #d6cdbb;
+  --cat2-toss-text-probably: #63563b;
   --cat3-bg: #071C3E;
   --cat3-fg: #F3F6FB;
   --cat3-c0-a: #9AA0F5;
