--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,23 +17,23 @@
 	--z-overlay: 1000;
 
 	/* presets (used in reset.css) */
-	--border-radius: 2px;
+	--border-radius: 0px;
 	--font-body: var(--sans);
 	--font-form: var(--sans);
-	--color-bg: var(--cat2-bg);
-	--color-fg: var(--cat2-fg);
+	--color-bg: var(--cat-bg);
+	--color-fg: var(--cat-fg);
 	--color-primary: var(--color-fg);
 	--color-link: var(--color-fg);
-	--color-focus: var(--color-red);
-	--color-mark: var(--color-yellow);
-	--color-selection: var(--color-gray-300);
-	--color-border: var(--color-gray-300);
-	--color-button-bg: var(--color-gray-300);
-	--color-button-fg: var(--color-gray-900);
-	--color-button-hover: var(--color-gray-400);
-	--color-input-bg: var(--color-gray-50);
-	--color-input-fg: var(--color-gray-900);
-	--color-placeholder: var(--color-gray-500);
+	--color-focus: var(--cat-c0-primary);
+	--color-mark: var(--cat-toss-primary);
+	--color-selection: var(--cat-toss-primary);
+	--color-border: var(--color-fg);
+	--color-button-bg: var(--color-fg);
+	--color-button-fg: var(--color-bg);
+	--color-button-hover: var(--color-fg);
+	--color-input-bg: var(--color-bg);
+	--color-input-fg: var(--color-fg);
+	--color-placeholder: var(--color-fg);
 
 	/* "1" second duration */
 	--1s: 1ms;
@@ -76,4 +76,16 @@ strong {
 
 body {
 	background: url("assets/bg/a.png");
+}
+
+table caption {
+	font-size: var(--24px);
+	font-weight: 900 !important;
+	text-align: center;
+}
+
+@media only screen and (min-width: 960px) {
+	p {
+		font-size: var(--20px);
+	}
 }
