--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,55 +1,48 @@
 /**
  * Do not edit directly
- * Generated on Tue, 07 Mar 2023 12:56:47 GMT
+ * Generated on Tue, 07 Mar 2023 13:00:25 GMT
  */
 
 :root {
-  --cat1-bg: #F3F6FB;
-  --cat1-fg: #1a1a1a;
-  --cat1-c0: #4047CA;
-  --cat1-c1: #12B5AE;
-  --cat1-c2: #F68511;
-  --cat1-c3: #DF3D82;
-  --cat1-default: #8e8e8e;
-  --cat2-bg: #fffaf0;
-  --cat2-fg: #433f37;
-  --cat2-c0-primary: #e80700;
-  --cat2-c0-secondary: #ff5651;
-  --cat2-c0-text-primary: #fffafa;
-  --cat2-c0-text-secondary: #5d0300;
-  --cat2-c1-primary: #3c7d7f;
-  --cat2-c1-secondary: #4b9ea2;
-  --cat2-c1-text-primary: #f5fafa;
-  --cat2-c1-text-secondary: #162e30;
-  --cat2-c2-primary: #b039dd;
-  --cat2-c2-secondary: #c56de6;
-  --cat2-c2-text-primary: #fdf9fe;
-  --cat2-c2-text-secondary: #460f5a;
-  --cat2-other-primary: #83724E;
-  --cat2-other-secondary: #9F8F60;
-  --cat2-other-text-primary: #fcfbfa;
-  --cat2-other-text-secondary: #2e291c;
-  --cat2-toss-primary: #d6cdbb;
-  --cat2-toss-text-primary: #63563b;
-  --cat3-bg: #071C3E;
-  --cat3-fg: #F3F6FB;
-  --cat3-c0-a: #9AA0F5;
-  --cat3-c0-b: #5E64B9;
-  --cat3-c0-text: #8187DC;
-  --cat3-c1-a: #0d8681;
-  --cat3-c1-b: #007771;
-  --cat3-c1-text: #06958F;
-  --cat3-c2-a: #ba6207;
-  --cat3-c2-b: #B14A00;
-  --cat3-c2-text: #CF6800;
-  --cat3-c3-a: #de3079;
-  --cat3-c3-b: #BD376F;
-  --cat3-c3-text: #DB558D;
-  --cat3-other-a: #797979;
-  --cat3-other-b: #6B6B6B;
-  --cat3-other-text: #848484;
-  --cat3-toss-a: #2A3F61;
-  --cat3-toss-text: #98ADCF;
+  --cat-bg: #fffaf0;
+  --cat-fg: #433f37;
+  --cat-c0-primary: #e80700;
+  --cat-c0-secondary: #ff5651;
+  --cat-c0-text-primary: #fffafa;
+  --cat-c0-text-secondary: #5d0300;
+  --cat-c1-primary: #3c7d7f;
+  --cat-c1-secondary: #4b9ea2;
+  --cat-c1-text-primary: #f5fafa;
+  --cat-c1-text-secondary: #162e30;
+  --cat-c2-primary: #b039dd;
+  --cat-c2-secondary: #c56de6;
+  --cat-c2-text-primary: #fdf9fe;
+  --cat-c2-text-secondary: #460f5a;
+  --cat-other-primary: #83724E;
+  --cat-other-secondary: #9F8F60;
+  --cat-other-text-primary: #fcfbfa;
+  --cat-other-text-secondary: #2e291c;
+  --cat-toss-primary: #d6cdbb;
+  --cat-toss-text-primary: #63563b;
+  --cat2-bg: #071C3E;
+  --cat2-fg: #F3F6FB;
+  --cat2-c0-a: #9AA0F5;
+  --cat2-c0-b: #5E64B9;
+  --cat2-c0-text: #8187DC;
+  --cat2-c1-a: #0d8681;
+  --cat2-c1-b: #007771;
+  --cat2-c1-text: #06958F;
+  --cat2-c2-a: #ba6207;
+  --cat2-c2-b: #B14A00;
+  --cat2-c2-text: #CF6800;
+  --cat2-c3-a: #de3079;
+  --cat2-c3-b: #BD376F;
+  --cat2-c3-text: #DB558D;
+  --cat2-other-a: #797979;
+  --cat2-other-b: #6B6B6B;
+  --cat2-other-text: #848484;
+  --cat2-toss-a: #2A3F61;
+  --cat2-toss-text: #98ADCF;
   --color-black: #000000;
   --color-white: #ffffff;
   --color-gray-50: #f7f7f7;
