--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -93,7 +93,11 @@ summary {
 }
 
 @media only screen and (min-width: 1280px) {
-	p, details, li, input {
+	p, details, li {
+		font-size: var(--20px);
+	}
+
+	input {
 		font-size: var(--20px) !important;
 	}
 }
