--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,9 +6,10 @@
 /* colors defined in variables.css */
 :root {
 	/* font */
-	--sans:  -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
+	--sans:  system-ui, -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
 	--serif: "Tiempos Text Web", Iowan Old Style, Times New Roman, Times, serif;
-	--mono: Menlo, Consolas, Monaco, monospace;
+	--mono: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+
 
 	/* z-index */
 	--z-bottom: -100;
