--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -111,6 +111,7 @@ summary {
 	cursor: pointer;
 	background: var(--color-mark);
 	padding: 8px;
+	border-radius: var(--border-radius);
 }
 
 @media only screen and (min-width: 1280px) {
